<resources>
    <string-array name="incidencesUrgence">
        <item name="high">High</item>
        <item name="medium">Medium</item>
        <item name="low">Low</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">App Incidences</string>
    <string name="app_title">INCIDENCE APP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="save">SAVE</string>
    <string name="add">ADD</string>
    <string name="show">SHOW</string>
    <string name="delete">DELETE</string>
    <string name="delete_incidencia">Delete incidence</string>
    <string name="add_incidence">Add incidence</string>
    <string name="urgence">Urgence</string>
    <string name="incidence">Incidence</string>
    <string name="about">ABOUT</string>
    <string name="about_title">ABOUT THIS APP</string>
    <string name="settings">SETTINGS</string>
    <string name="language">Language: </string>
    <string name="languageChange">Change language</string>/>
    <string name="deleteAll">This option will delete all the incidences forever. If you press the OK button, you will never restore the deleted incidences. </string>
    <string name="noIncidences">No incidences to show yet</string>
    <string name="deleteAllToast">All the incidences deleted succesfuly!</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="state">State</string>
    <string name="pending">Pending</string>
    <string name="assigned">Assigned</string>
    <string name="resolved">Resolved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressToChangeState">Press the button to change the state</string>
    <string name="change">Change</string>
</resources>

