<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncidenceInfoActivity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30px">
        <ImageButton
            android:id="@+id/backToListIncidences"
            android:background="@drawable/arrow_back"
            />

        <ImageView
            android:id="@+id/stateCircleInfo"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="30px"
            android:background="@drawable/red_circle" />

        <TextView
            android:id="@+id/incidenceInfoTitle"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:text="This is a sample text"
            android:textColor="@color/customBlue"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateIncidenceActivity"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/date"
            android:layout_margin="40px"
            android:textSize="45px"
            />

        <TextView
            android:id="@+id/urgenceIncidenceActivity"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/urgence"
            android:layout_margin="40px"
            android:textSize="45px"
            />

        <TextView
            android:id="@+id/stateIncidenceActivity"
            android:layout_width="129dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="40px"
            android:text="@string/state"
            android:textSize="45px" />

        <TextView
            android:id="@+id/changeStateTextView"
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/pressToChangeState"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/changeStateButton"
            android:layout_width="60dp"
            android:layout_height="29dp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:layout_margin="30px"
            android:background="@color/customBlue"
            android:gravity="center" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>